fix fatJar, set version to java 17-preview